p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80

          - path: /app1.com
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

          - path: /app2.com
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
          - path: /app3.com
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80
